k8s/influxdb/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: storage
              mountPath: /var/lib/influxdb2
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: influxdb-data
