k8s/influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetPort: 8086
