k8s/influxdb/ingress.yaml
# Ingress dla InfluxDB - influxdb.192.168.1.24.nip.io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: influxdb
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: influxdb.192.168.1.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              number: 8086
  tls:
  - hosts:
    - influxdb.192.168.1.24.nip.io
    secretName: influxdb-tls
